--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,22 +1,25 @@
-/*Global Styles*/
+/* Global Styles */
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
+
 
 .alert {
     margin-top: 10px;
 }
+
 
 #footer {
     border-top: 1px solid #dddddd;
     padding-top: 10px;
 }
 
+/* Groups Selector */
+
 #group-selector {
     margin-top: 30px;
 }
-
 #group-selector select {
     margin: 0;
     width: 85%;
@@ -25,4 +28,17 @@ h1, h2, h3 {
     height: 30px;
     line-height: 30px;
     color: #555555;
+}
+.container {
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-bottom: 2%;
+}
+.formcontainer {
+    width: 500px;
+    padding-left: 2%;
+    padding-bottom: 2%;
+}
+.confirmbuttons {
+    padding-bottom: 15px;
 }
