--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -1,29 +1,26 @@
 {% extends "students/base.html" %}
 {% load static from staticfiles %}
-{% block meta_title %}Студенти{% endblock meta_title %}
-{% block title %}База Студентів{% endblock title %}
+{% block meta_title %}Групи{% endblock meta_title %}
+{% block title %}База Груп Студентів{% endblock title %}
 {% block content %}
-	<a href="{% url "students_add" %}" class="btn btn-primary">Додати Студента</a></h2>
+	<a href="{% url "groups_add" %}" class="btn btn-primary">Додати Групу</a></h2>
 
 				<!-- Start Students Listing -->
+				{% if groups %}
 				<table class="table table-hover table-striped">
           <thead>
             <tr>
               <th><a href="">№</a></th>
-              <th>Фото</th>
-              <th><a href="">Прізвище &uarr;</a></th>
-              <th><a href="#">Ім'я</a></th>
-              <th><a href="#">№ Білету</a></th>
+              <th><a href="">Назва Групи &uarr;</a></th>
+              <th><a href="#">Староста</a></th>
               <th>Дії</th>
           </thead>
 					<tbody>
-						{% for student in students %}
+						{% for group in groups %}
 						<tr>
 							<td>{{ forloop.counter }}</td>
-							<td><img class="img-circle" src="{% static student.image %}" height="30" width="30" /></td>
-							<td><a href="{% url "students_edit" student.id %}">{{ student.last_name }}</td>
-								<td><a href="{% url "students_edit" student.id %}">{{ student.first_name }}</td>
-									<td>{{ student.ticket }}</td>
+							<td><a href="{% url "groups_edit" group.id %}">{{ group.name }}</td>
+								<td><a href="{% url "students_edit" group.leader.id %}">{{ group.leader.name }}</td>
 									<td>
 										<div class="btn-group">
 											<button type="button" class="btn btn-default dropdown-toggle"
@@ -31,9 +28,8 @@
 											<span class="caret"></span>
 										</button>
 										<ul class="dropdown-menu" role="menu">
-											<li><a href="{% url "students_edit" student.id %}">Редагувати</a></li>
-											<li><a href="/journal/{{ student.id }}">Відвідування</a></li>
-											<li><a href="{% url "students_delete" student.id %}">Видалити</a></li>
+											<li><a href="{% url "groups_edit" group.id %}">Редагувати</a></li>
+											<li><a href="{% url "groups_delete" group.id %}">Видалити</a></li>
 										</ul>
 									</div>
 								</td>
@@ -42,7 +38,9 @@
           </tbody>
         </table>
 				<!-- End Students Listing -->
-
+				{% else %}
+				<p>Поки немає груп у базі</p>
+				{% endif %}
 				<nav>
 					<ul class="pagination">
 						<li><a href="#">&laquo;</a></li>
