--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -9,7 +9,7 @@
 	<meta name="description" value="Система Обліку Студентів Навчального Закладу" />
 	<!-- Include Styles -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="{% static "css/main.css" %}" charset="utf-8">
+	<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/main.css" %}" charset="utf-8">
 	{% block extra_css %}{% endblock extra_css %}
 </head>
 
@@ -39,16 +39,15 @@
 		</div>
 		<!-- End Header -->
 
-		<!-- Start Subheader -->
+		<!-- Start subheader -->
 		<div class="row" id="sub-header">
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs" role="tablist">
-					<li role="presentation" class="active"><a href="{% url "home" %}">Студенти</a></li>
-					<li role="presentation"><a href="/journal">Відвідування</a></li>
-					<li role="presentation"><a href="{% url "groups" %}">Групи</a></li>
+					<li role="presentation" {% if request.path == '/' %} class="active"{% endif %}><a href="{% url "home" %}">Студенти</a></li>
+					<li role="presentation" {% if '/journal' in request.path %} class="active"{% endif %}><a href="/journal">Відвідування</a></li>
+					<li role="presentation" {% if '/groups' in request.path %} class="active"{% endif %}><a href="{% url "groups" %}">Групи</a></li>
 				</ul>
 			</div>
-
 		</div>
 		<!-- End SubHeader -->
 
