--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -5,22 +5,29 @@
 {% block content %}
 	<a href="{% url "groups_add" %}" class="btn btn-primary">Додати Групу</a></h2>
 
-				<!-- Start Students Listing -->
+				<!-- Start Groups Listing -->
 				{% if groups %}
 				<table class="table table-hover table-striped">
+					{% with order_by=request.GET.order_by reverse=request.GET.reverse %}
           <thead>
             <tr>
-              <th><a href="">№</a></th>
-              <th><a href="">Назва Групи &uarr;</a></th>
+              <th><a href="{% url "groups" %}?order_by=id{% if order_by == 'id' and reverse != '1' %}&amp;reverse=1{% endif %}">
+								№
+								{% if order_by == 'id' and reverse != '1' %}&uarr;
+								{% elif order_by == 'id' and reverse == '1' %}&darr;
+								{% endif %}</a></th>
+							</a></th>
+              <th><a href="{% url "groups" %}?order_by=title{% if order_by == 'title' and reverse != '1' %}&amp;reverse=1{% endif %}">Назва Групи &uarr;</a></th>
               <th><a href="#">Староста</a></th>
               <th>Дії</th>
           </thead>
+						{% endwith %}
 					<tbody>
 						{% for group in groups %}
 						<tr>
 							<td>{{ forloop.counter }}</td>
-							<td><a href="{% url "groups_edit" group.id %}">{{ group.name }}</td>
-								<td><a href="{% url "students_edit" group.leader.id %}">{{ group.leader.name }}</td>
+							<td><a href="{% url "groups_edit" group.id %}">{{ group.title }}</td>
+							<td>{% if group.leader %}<a href="{% url "students_edit" group.leader.id %}">{{ group.leader.first_name }} {{ group.leader.last_name }}</a>{% else %}Немає{% endif %}</td>
 									<td>
 										<div class="btn-group">
 											<button type="button" class="btn btn-default dropdown-toggle"
@@ -41,16 +48,24 @@
 				{% else %}
 				<p>Поки немає груп у базі</p>
 				{% endif %}
+				{% if groups.has_other_pages %}
+				{% with order_by=request.GET.order_by reverse=request.GET.reverse %}
 				<nav>
 					<ul class="pagination">
-						<li><a href="#">&laquo;</a></li>
-						<li><a href="#">1</a></li>
-						<li class="active"><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-						<li><a href="#">5</a></li>
-						<li><a href="#">&raquo;</a></li>
+						<li>
+							<a href="{% url "groups" %}?page=1&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">&laquo;</a>
+						</li>
+						{% for p in groups.paginator.page_range %}
+						<li {% if groups.number == p %}class="active"{% endif %}>
+							<a href="{% url "groups" %}?page={{ p }}&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">{{ p }}</a>
+						</li>
+						{% endfor %}
+						<li>
+							<a href="{% url "groups" %}?page={{ groups.paginator.num_pages }}&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">&raquo;</a>
+						</li>
 					</ul>
 				</nav>
+				{% endwith %}
+				{% endif %}
 
 {% endblock content %}
