--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -52,19 +52,19 @@
 		</div>
 		<!-- End SubHeader -->
 
-		<!-- Start Main Page Content -->
+		<!-- Start Content Columns -->
 		<div class="row" id="content-columns">
 			<div class="col-xs-12" id="content-column">
-				{% comment "Not used alert so far" %}
-				<div class="alert alert-warning">Status update!</div>
-				{% endcomment %}
+				{% block status_message %}
+				{% if request.GET.status_message %}
+				<div class="alert alert-warning" role="alert">{{ request.GET.status_message }}</div>
+				{% endif %}
+				{% endblock %}
 				<h2>{% block title %}{% endblock title %}</h2>
 				{% block content %}{% endblock content %}
-
 			</div>
-
 		</div>
-		<!-- End Main Page Content -->
+<!-- End Content Columns -->
 
 		<!-- Start Footer -->
 		<div class="row" id="footer">
