--- a/students/templates/students/students_add.html
+++ b/students/templates/students/students_add.html
@@ -1,7 +1,14 @@
 {% extends "students/base.html" %} {% load static from staticfiles %} {% block meta_title %}Додати Студента{% endblock meta_title %} {% block title %}Додати Студента{% endblock title %} {% block content %}
 <form action="{% url "students_add" %}" method="post" enctype="multipart/form-data">
  {% csrf_token %}
-<div>
+ {% block status_message %}
+ {% if errors %}
+ <div class="alert alert-warning" role="alert">
+	 Будь ласка, виправте наступні помилки
+ </div>
+ {% endif %}
+ {% endblock status_message %}
+ <div>
 	<label for="first_name">Ім'я*</label>
 	<input type="text" value="{{ request.POST.first_name }}" name="first_name" id="first_name" placeholder="Введіть ваше ім'я"/>
 	<span class="help-block">{{ errors.first_name }}</span>
