--- a/students/static/css/main.css
+++ b/students/static/css/main.css
@@ -4,22 +4,22 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 
-
 .alert {
     margin-top: 10px;
 }
-
 
 #footer {
     border-top: 1px solid #dddddd;
     padding-top: 10px;
 }
 
+
 /* Groups Selector */
 
 #group-selector {
     margin-top: 30px;
 }
+
 #group-selector select {
     margin: 0;
     width: 85%;
@@ -29,16 +29,25 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 30px;
     color: #555555;
 }
+
 .container {
     margin-left: 1%;
     margin-right: 1%;
     padding-bottom: 2%;
 }
+
 .formcontainer {
     width: 500px;
     padding-left: 2%;
     padding-bottom: 2%;
 }
+
 .confirmbuttons {
     padding-bottom: 15px;
+}
+
+/* Form Styles */
+
+textarea, select, input {
+    max-width: 300px;
 }
