--- a/students/templates/students/students_edit.html
+++ b/students/templates/students/students_edit.html
@@ -1,8 +1,8 @@
 {% extends "students/base.html" %}
 {% load static from staticfiles %}
 {% load crispy_forms_tags %}
-{% block meta_title %}Редагувати Студента{% endblock meta_title %}
-{% block title %}Редагувати Студента{% endblock title %}
+{% block meta_title %} {% if 'add/' in request.path %} Додати Студента {% else %} Редагувати Студента {% endif %} {% endblock meta_title %}
+{% block title %} {% if 'add/' in request.path %} Додати Студента {% else %} Редагувати Студента {% endif %} {% endblock title %}
 {% block status_message %}
 {% if form.errors %}
 <div class="alert alert-warning" role="alert">Будь ласка, виправте наступні помилки</div>
