Add groups_delet View

--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -1,7 +1,7 @@
 {% extends "students/base.html" %}
 {% load static from staticfiles %}
 {% block meta_title %}Групи{% endblock meta_title %}
-{% block title %}База Груп Студентів{% endblock title %}
+{% block title %}Список Груп Студентів{% endblock title %}
 {% block content %}
 	<a href="{% url "groups_add" %}" class="btn btn-primary">Додати Групу</a></h2>
 
