--- a/students/templates/students/students_confirm_delete.html
+++ b/students/templates/students/students_confirm_delete.html
@@ -6,7 +6,6 @@
 <form action="{% url "students_delete" object.id %}" method="post">
 {% csrf_token %}
 <p>Ви дійсно хочете видалити студента "{{ object }}"?</p>
-<input type="submit" value="Так" name="delete_button"
-class="btn btn-danger" /><br /><br />
+<input type="submit" value="Так" name="delete_button" class="btn btn-danger" /><br /><br />
 </form>
 {% endblock content %}
