--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -1,338 +1,58 @@
 {% extends "students/base.html" %}
 {% load static from staticfiles %}
-{% block meta_title %}Журнал{% endblock meta_title %}
-{% block title %}Облік відвідування{% endblock title %}
+{% block meta_title %}Облік Відвідування{% endblock meta_title %}
+{% block title %}Облік Відвідування{% endblock title %}
 {% block content %}
-
-				<div class="datechoose" style="text-align: center;">
-						<a href="#">&larr;</a>
-						<strong>Вересень 2016</strong>
-						<a href="#">&rarr;</a>
-				</div>
-				<!-- Start Students Listing -->
-				<div class="maintable" style="margin-right: 15px;">
-				<table class="table table-bordered">
-						<thead>
-							<th>#</th>
-							<th>Студент</th>
-							<th>Чт<p>1</p></th>
-							<th>Пт<p>2</p></th>
-							<th>Сб<p>3</p></th>
-							<th>Нд<p>4</p></th>
-							<th>Пн<p>5</p></th>
-							<th>Вт<p>6</p></th>
-							<th>Ср<p>7</p></th>
-							<th>Чт<p>8</p></th>
-							<th>Пт<p>9</p></th>
-							<th>Сб<p>10</p></th>
-							<th>Нд<p>11</p></th>
-							<th>Пн<p>12</p></th>
-							<th>Вт<p>13</p></th>
-							<th>Ср<p>14</p></th>
-							<th>Чт<p>15</p></th>
-							<th>Пт<p>16</p></th>
-							<th>Сб<p>17</p></th>
-							<th>Нд<p>18</p></th>
-							<th>Пн<p>19</p></th>
-							<th>Вт<p>20</p></th>
-							<th>Ср<p>21</p></th>
-							<th>Чт<p>22</p></th>
-							<th>Пт<p>23</p></th>
-							<th>Сб<p>24</p></th>
-							<th>Нд<p>25</p></th>
-							<th>Пн<p>26</p></th>
-							<th>Вт<p>27</p></th>
-							<th>Ср<p>28</p></th>
-							<th>Чт<p>29</p></th>
-							<th>Пт<p>30</p></th>
-						</thead>
-						<tbody>
-							<tr>
-								<td>1</td>
-								<td><a title="Редагувати" href="#">Литвин Олександр</a></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-							</tr>
-							<tr>
-								<td>2</td>
-								<td><a title="Редагувати" href="#">Мороз Вікторія</a></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-							</tr>
-							<tr>
-								<td>3</td>
-								<td><a title="Редагувати" href="#">Желюк Михайло</a></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-								<td><div class="checkbox">
-								<label><input type="checkbox" value=""></label>
-								</div></td>
-							</tr>
-						</tbody>
-				</table>
-				</div>
-				<!-- End Students Listing -->
-
-
+{% if not students %}
+<div class="alert alert-warning">
+	Поки немає жодного студента в базі. Будь-ласка, <a href="{% url "students_add" %}">додайте</a> першого.
+</div>
+{% else %}
+<p id="journal-nav" class="text-center">
+	<a href="?month={{ prev_month }}" title="Попередній Місяць">&larr;</a>
+	<!-- TODO: translate month name -->
+	<strong>{{ month_verbose }} {{ year }}</strong>
+	<a href="?month={{ next_month }}" title="Наступний Місяць">&rarr;</a>
+</p>
+<table class="table table-hover table-striped table-bordered" id="students-journal">
+	<thead>
+		<tr class="header">
+			<th class="num">#</th>
+			<th class="name">Студент</th>
+			{% for day in month_header %}
+			<th class="day-header">
+				<!-- TODO: translate day name -->
+				{{ day.verbose }}
+				<br /> {{ day.day }}
+			</th>
+			{% endfor %}
+		</tr>
+	</thead>
+	<tbody>
+		{% csrf_token %}
+		{% for student in students %}
+		<tr>
+			<td>
+				{% if is_paginated %}
+				{{ page_obj.start_index|add:forloop.counter|add:"-1" }}
+				{% else %}
+				{{ forloop.counter }}
+				{% endif %}
+			</td>
+			<td>
+				<a title="Редагувати" target="_blank" href="{% url "students_edit" student.id %}">{{ student.fullname }}</a>
+			</td>
+			{% for day in student.days %}
+			<td class="day-box">
+				<input type="checkbox" data-student-id="{{ student.id }}" data-date="{{ day.date }}" data-url="{{ student.update_url }}" value="1" {% if day.present %} checked="checked" {% endif %} />
+			</td>
+			{% endfor %}
+		</tr>
+		{% endfor %}
+	</tbody>
+</table>
+{% endif %}
+{% with object_list=students %}
+{% include "students/pagination.html" %}
+{% endwith %}
 {% endblock content %}
