--- a/students/templates/students/exams_list.html
+++ b/students/templates/students/exams_list.html
@@ -42,7 +42,13 @@
 				<tbody>
 					{% for exam in exams %}
 					<tr>
-						<td>{{ forloop.counter }}</td>
+						<td>
+							{% if is_paginated %}
+								{{ page_obj.start_index|add:forloop.counter0 }}
+							{% else %}
+								{{ forloop.counter }}
+							{% endif %}
+						</td>
 						<td><a href="{% url "exams_edit" exam.id %}">{{ exam.subject }}</td>
 						<td><a href="{% url "exams_edit" exam.id %}">{{ exam.examdate }}</td>
 						<td><a href="{% url "exams_edit" exam.id %}">{{ exam.teacher }}</td>
@@ -67,24 +73,8 @@
 			{% else %}
 			<p>Поки немає іспитів у базі</p>
 			{% endif %}
-			{% if exams.has_other_pages %}
-			{% with order_by=request.GET.order_by reverse=request.GET.reverse %}
-			<nav>
-				<ul class="pagination">
-					<li>
-						<a href="{% url "exams" %}?page=1&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">&laquo;</a>
-					</li>
-					{% for p in exams.paginator.page_range %}
-					<li {% if exams.number == p %}class="active"{% endif %}>
-						<a href="{% url "exams" %}?page={{ p }}&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">{{ p }}</a>
-					</li>
-					{% endfor %}
-					<li>
-						<a href="{% url "exams" %}?page={{ exams.paginator.num_pages }}&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">&raquo;</a>
-					</li>
-				</ul>
-			</nav>
+			{% with object_list=exams %}
+				{% include "students/pagination.html" %}
 			{% endwith %}
-			{% endif %}
 
 {% endblock content %}
