--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -25,7 +25,13 @@
 					<tbody>
 						{% for group in groups %}
 						<tr>
-							<td>{{ forloop.counter }}</td>
+							<td>
+				        {% if is_paginated %}
+				          {{ page_obj.start_index|add:forloop.counter0 }}
+				        {% else %}
+				          {{ forloop.counter }}
+				        {% endif %}
+				      </td>
 							<td><a href="{% url "groups_edit" group.id %}">{{ group.title }}</td>
 							<td>{% if group.leader %}<a href="{% url "students_edit" group.leader.id %}">{{ group.leader.first_name }} {{ group.leader.last_name }}</a>{% else %}Немає{% endif %}</td>
 									<td>
@@ -48,24 +54,8 @@
 				{% else %}
 				<p>Поки немає груп у базі</p>
 				{% endif %}
-				{% if groups.has_other_pages %}
-				{% with order_by=request.GET.order_by reverse=request.GET.reverse %}
-				<nav>
-					<ul class="pagination">
-						<li>
-							<a href="{% url "groups" %}?page=1&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">&laquo;</a>
-						</li>
-						{% for p in groups.paginator.page_range %}
-						<li {% if groups.number == p %}class="active"{% endif %}>
-							<a href="{% url "groups" %}?page={{ p }}&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">{{ p }}</a>
-						</li>
-						{% endfor %}
-						<li>
-							<a href="{% url "groups" %}?page={{ groups.paginator.num_pages }}&amp;order_by={{ order_by }}&amp;reverse={{ reverse }}">&raquo;</a>
-						</li>
-					</ul>
-				</nav>
+				{% with object_list=groups %}
+				  {% include "students/pagination.html" %}
 				{% endwith %}
-				{% endif %}
 
 {% endblock content %}
