--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -80,6 +80,7 @@
 	<!-- Javascripts Section -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
+	<script src="{% static "js/main.js" %}"></script>
 	{% block extra_js %}{% endblock extra_js %}
 </body>
 
