--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -26,15 +26,14 @@
 			</div>
 			<!-- Groups Selector -->
 			<div class="col-xs-4" id="group-selector">
-				<strong>Група:</strong>
-				<select>
-					<option value="">Усі Студенти</option>
-					<option value="">Ф-07, Литвин Олександр (№ 007)</option>
-					<option value="">Ф-08, Мороз Вікторія (№ 010)</option>
-					<option value="">Ф-09, Желюк Михайло (№ 609)</option>
-				</select>
-
-			</div>
+        <strong>Група:</strong>
+        <select>
+          <option value="">Усі Студенти</option>
+          {% for group in GROUPS %}
+          <option value="{{ group.id }}"{% if group.selected %}selected="1"{% endif %}>{{ group.title }}{% if group.leader %}, {{ group.leader }}{% endif %}</option>
+          {% endfor %}
+        </select>
+      </div>
 
 		</div>
 		<!-- End Header -->
@@ -79,6 +78,7 @@
 	<!-- End container -->
 	<!-- Javascripts Section -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" charset="utf-8"></script>
+	<script src="{% static "js/jquery.cookie.js" %}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
 	<script src="{% static "js/main.js" %}"></script>
 	{% block extra_js %}{% endblock extra_js %}
