--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -9,6 +9,7 @@
 	<meta name="description" value="Система Обліку Студентів Навчального Закладу" />
 	<!-- Include Styles -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.42/css/bootstrap-datetimepicker.min.css">
 	<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/main.css" %}" charset="utf-8">
 	{% block extra_css %}{% endblock extra_css %}
 </head>
@@ -78,8 +79,11 @@
 	<!-- End container -->
 	<!-- Javascripts Section -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" charset="utf-8"></script>
-	<script src="{% static "js/jquery.cookie.js" %}"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/locale/uk.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.42/js/bootstrap-datetimepicker.min.js" charset="utf-8"></script>
 	<script src="{% static "js/main.js" %}"></script>
 	{% block extra_js %}{% endblock extra_js %}
 </body>
