--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -43,11 +43,11 @@
 		<div class="row" id="sub-header">
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs" role="tablist">
-					<li role="presentation" {% if request.path == '/' %} class="active"{% endif %}><a href="{% url "home" %}">Студенти</a></li>
-					<li role="presentation" {% if '/journal' in request.path %} class="active"{% endif %}><a href="{% url "journal" %}">Відвідування</a></li>
-					<li role="presentation" {% if '/groups' in request.path %} class="active"{% endif %}><a href="{% url "groups" %}">Групи</a></li>
-					<li role="presentation" {% if '/exams' in request.path %} class="active"{% endif %}><a href="{% url "exams" %}">Іспити</a></li>
-					<li role="presentation" {% if '/contact-admin' in request.path %}class="active"{% endif %}><a href="{% url "contact_admin" %}">Контакт</a></li>
+					<li role="presentation" {% if request.path == '/' %} class="active"{% endif %}><a href="{% url "home" %}" class="content-url">Студенти</a></li>
+					<li role="presentation" {% if '/journal' in request.path %} class="active"{% endif %}><a href="{% url "journal" %}" class="content-url">Відвідування</a></li>
+					<li role="presentation" {% if '/groups' in request.path %} class="active"{% endif %}><a href="{% url "groups" %}" class="content-url">Групи</a></li>
+					<li role="presentation" {% if '/exams' in request.path %} class="active"{% endif %}><a href="{% url "exams" %}" class="content-url">Іспити</a></li>
+					<li role="presentation" {% if '/contact-admin' in request.path %}class="active"{% endif %}><a href="{% url "contact_admin" %}" class="contact-admin-form-button content-url">Контакт</a></li>
 				</ul>
 			</div>
 		</div>
@@ -65,6 +65,7 @@
         {% block content %}{% endblock content %}
       </div>
     </div>
+		<div class="ajax-loader"><img src='{% static "img/ajax-loader-bert2.gif" %}'></div>
 <!-- End Content Columns -->
 
 		<!-- Start Footer -->
@@ -77,8 +78,27 @@
 
 	</div>
 	<!-- End container -->
+	<!-- Modal Boilerplate -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="myModalLabel"><!-- --></h4>
+				</div>
+				<div class="modal-body"><!-- --></div>
+				<div class="modal-footer">
+					<div class='ajax-loader-modal'>
+						<img src='{% static "img/ajax-loader-bert2-white.gif" %}'>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- Javascripts Section -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/locale/uk.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
