--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -3,7 +3,7 @@
 {% block meta_title %}Групи{% endblock meta_title %}
 {% block title %}Список Груп Студентів{% endblock title %}
 {% block content %}
-	<a href="{% url "groups_add" %}" class="btn btn-primary">Додати Групу</a></h2>
+	<a href="{% url "groups_add" %}" class="btn btn-primary" id="group-add-form-button">Додати Групу</a></h2>
 
 				<!-- Start Groups Listing -->
 				{% if groups %}
@@ -11,13 +11,13 @@
 					{% with order_by=request.GET.order_by reverse=request.GET.reverse %}
           <thead>
             <tr>
-              <th><a href="{% url "groups" %}?order_by=id{% if order_by == 'id' and reverse != '1' %}&amp;reverse=1{% endif %}">
+              <th><a href="{% url "groups" %}?order_by=id{% if order_by == 'id' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
 								№
 								{% if order_by == 'id' and reverse != '1' %}&uarr;
 								{% elif order_by == 'id' and reverse == '1' %}&darr;
 								{% endif %}</a></th>
 							</a></th>
-              <th><a href="{% url "groups" %}?order_by=title{% if order_by == 'title' and reverse != '1' %}&amp;reverse=1{% endif %}">Назва Групи &uarr;</a></th>
+              <th><a href="{% url "groups" %}?order_by=title{% if order_by == 'title' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">Назва Групи &uarr;</a></th>
               <th><a href="#">Староста</a></th>
               <th>Дії</th>
           </thead>
@@ -32,8 +32,8 @@
 				          {{ forloop.counter }}
 				        {% endif %}
 				      </td>
-							<td><a href="{% url "groups_edit" group.id %}">{{ group.title }}</td>
-							<td>{% if group.leader %}<a href="{% url "students_edit" group.leader.id %}">{{ group.leader.first_name }} {{ group.leader.last_name }}</a>{% else %}Немає{% endif %}</td>
+							<td><a href="{% url "groups_edit" group.id %}" class="group-edit-form-link">{{ group.title }}</td>
+							<td>{% if group.leader %}<a href="{% url "students_edit" group.leader.id %}" class="student-edit-form-link">{{ group.leader.first_name }} {{ group.leader.last_name }}</a>{% else %}Немає{% endif %}</td>
 									<td>
 										<div class="btn-group">
 											<button type="button" class="btn btn-default dropdown-toggle"
@@ -41,8 +41,8 @@
 											<span class="caret"></span>
 										</button>
 										<ul class="dropdown-menu" role="menu">
-											<li><a href="{% url "groups_edit" group.id %}">Редагувати</a></li>
-											<li><a href="{% url "groups_delete" group.id %}">Видалити</a></li>
+											<li><a href="{% url "groups_edit" group.id %}" class="group-edit-form-link">Редагувати</a></li>
+											<li><a href="{% url "groups_delete" group.id %}" class="group-delete-form-link">Видалити</a></li>
 										</ul>
 									</div>
 								</td>
