--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -3,30 +3,30 @@
 {% block meta_title %}Студенти{% endblock meta_title %}
 {% block title %}База Студентів{% endblock title %}
 {% block content %}
-	<a href="{% url "students_add" %}" class="btn btn-primary">Додати Студента</a></h2>
+	<a href="{% url "students_add" %}" class="btn btn-primary" id="student-add-form-button">Додати Студента</a></h2>
 
 				<!-- Start Students Listing -->
 				<table class="table table-hover table-striped">
 					{% with order_by=request.GET.order_by reverse=request.GET.reverse %}
           <thead>
             <tr>
-              <th><a href="{% url "home" %}?order_by=id{% if order_by == 'id' and reverse != '1' %}&amp;reverse=1{% endif %}">
+              <th><a href="{% url "home" %}?order_by=id{% if order_by == 'id' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
 								№
 								{% if order_by == 'id' and reverse != '1' %}&uarr;
 								{% elif order_by == 'id' and reverse == '1' %}&darr;
 								{% endif %}</a></th>
               <th>Фото</th>
-							<th><a href="{% url "home" %}?order_by=last_name{% if order_by == 'last_name' and reverse != '1' %}&amp;reverse=1{% endif %}">
+							<th><a href="{% url "home" %}?order_by=last_name{% if order_by == 'last_name' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
 								Прізвище
 								{% if order_by == 'last_name' and reverse != '1' %}&uarr;
 								{% elif order_by == 'last_name' and reverse == '1' %}&darr;
 								{% endif %}</a></th>
-							<th><a href="{% url "home" %}?order_by=first_name{% if order_by == 'first_name' and reverse != '1' %}&amp;reverse=1{% endif %}">
+							<th><a href="{% url "home" %}?order_by=first_name{% if order_by == 'first_name' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
 								Ім'я
 								{% if order_by == 'first_name' and reverse != '1' %}&uarr;
 								{% elif order_by == 'first_name' and reverse == '1' %}&darr;
 								{% endif %}</a></th>
-							<th><a href="{% url "home" %}?order_by=ticket{% if order_by == 'ticket' and reverse != '1' %}&amp;reverse=1{% endif %}">
+							<th><a href="{% url "home" %}?order_by=ticket{% if order_by == 'ticket' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
 								№ Білету
 								{% if order_by == 'ticket' and reverse != '1' %}&uarr;
 								{% elif order_by == 'ticket' and reverse == '1' %}&darr;
@@ -49,8 +49,8 @@
 								{% else %}
 								<img class="img-circle" src="{% static "img/default_user.png" %}" height="30" width="30" />
 								{% endif %}</td>
-								<td><a href="{% url "students_edit" student.id %}">{{ student.last_name }}</td>
-								<td><a href="{% url "students_edit" student.id %}">{{ student.first_name }}</td>
+								<td><a href="{% url "students_edit" student.id %}" class="student-edit-form-link">{{ student.last_name }}</td>
+								<td><a href="{% url "students_edit" student.id %}" class="student-edit-form-link">{{ student.first_name }}</td>
 									<td>{{ student.ticket }}</td>
 									<td>
 										<div class="btn-group">
@@ -59,9 +59,9 @@
 											<span class="caret"></span>
 										</button>
 										<ul class="dropdown-menu" role="menu">
-											<li><a href="{% url "students_edit" student.id %}">Редагувати</a></li>
+											<li><a href="{% url "students_edit" student.id %}" class="student-edit-form-link">Редагувати</a></li>
 											<li><a href="{% url "journal" student.id %}">Відвідування</a></li>
-											<li><a href="{% url "students_delete" student.id %}">Видалити</a></li>
+											<li><a href="{% url "students_delete" student.id %}" class="student-delete-form-link">Видалити</a></li>
 										</ul>
 									</div>
 								</td>
