--- a/students/templates/contact_admin/form.html
+++ b/students/templates/contact_admin/form.html
@@ -1,12 +1,13 @@
 {% extends "students/base.html" %}
+{% load i18n %}
 {% load static from staticfiles %}
 {% load crispy_forms_tags %}
-{% block meta_title %}Зв'язок із Адміністратором{% endblock meta_title %}
-{% block title %}Зв'язок із Адміністратором{% endblock title %}
+{% block meta_title %}{% trans "Connext with Administrator" %}{% endblock meta_title %}
+{% block title %}{% trans "Connext with Administrator" %}{% endblock title %}
 {% block status_message %}
 {% if form.errors %}
 <div class="alert alert-warning" role="alert">
-Будь ласка, виправте наступні помилки:
+{% trans "Please fix the following mistakes" %}
 </div>
 {% endif %}
 {{ block.super }}
