--- a/students/templates/students/exams_list.html
+++ b/students/templates/students/exams_list.html
@@ -1,9 +1,10 @@
 {% extends "students/base.html" %}
+{% load i18n %}
 {% load static from staticfiles %}
-{% block meta_title %}Іспити{% endblock meta_title %}
-{% block title %}Іспити{% endblock title %}
+{% block meta_title %}{% trans "Exams" %}{% endblock meta_title %}
+{% block title %}{% trans "Exams" %}{% endblock title %}
 {% block content %}
-<a href="{% url "exams_add" %}" class="btn btn-primary" id="exam-add-form-button">Додати Іспит</a></h2>
+<a href="{% url "exams_add" %}" class="btn btn-primary" id="exam-add-form-button">{% trans "Add Exam" %}</a></h2>
 
 			<!-- Start exams Listing -->
 			{% if exams %}
@@ -17,26 +18,26 @@
 							{% elif order_by == 'id' and reverse == '1' %}&darr;
 							{% endif %}</a></th>
 						<th><a href="{% url "exams" %}?order_by=subject{% if order_by == 'subject' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
-							Назва предмета
+							{% trans "Subject Name" %}
 							{% if order_by == 'subject' and reverse != '1' %}&uarr;
 							{% elif order_by == 'subject' and reverse == '1' %}&darr;
 							{% endif %}</a></th>
 						<th><a href="{% url "exams" %}?order_by=examdate{% if order_by == 'examdate' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
-							Дата і час проведення
+							{% trans "Date and Time" %}
 							{% if order_by == 'examdate' and reverse != '1' %}&uarr;
 							{% elif order_by == 'examdate' and reverse == '1' %}&darr;
 							{% endif %}</a></th>
 						<th><a href="{% url "exams" %}?order_by=teacher{% if order_by == 'teacher' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
-							Ім'я та прізвище викладача
+							{% trans "Teacher's Name" %}
 							{% if order_by == 'teacher' and reverse != '1' %}&uarr;
 							{% elif order_by == 'teacher' and reverse == '1' %}&darr;
 							{% endif %}</a></th>
 						<th><a href="{% url "exams" %}?order_by=exam_group{% if order_by == 'exam_group' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
-							Група-учасник
+							{% trans "Group" %}
 							{% if order_by == 'exam_group' and reverse != '1' %}&uarr;
 							{% elif order_by == 'exam_group' and reverse == '1' %}&darr;
 							{% endif %}</a></th>
-						<th>Дії</th>
+						<th>{% trans "Actions" %}</th>
 				</thead>
 				{% endwith %}
 				<tbody>
@@ -56,12 +57,12 @@
 								<td>
 									<div class="btn-group">
 										<button type="button" class="btn btn-default dropdown-toggle"
-										data-toggle="dropdown">Дія
+										data-toggle="dropdown">{% trans "Action" %}
 										<span class="caret"></span>
 									</button>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="{% url "exams_edit" exam.id %}" class="exam-edit-form-link">Редагувати</a></li>
-										<li><a href="{% url "exams_delete" exam.id %}" class="exam-delete-form-link">Видалити</a></li>
+										<li><a href="{% url "exams_edit" exam.id %}" class="exam-edit-form-link">{% trans "Edit" %}</a></li>
+										<li><a href="{% url "exams_delete" exam.id %}" class="exam-delete-form-link">{% trans "Delete" %}</a></li>
 									</ul>
 								</div>
 							</td>
@@ -71,7 +72,7 @@
 			</table>
 			<!-- End Students Listing -->
 			{% else %}
-			<p>Поки немає іспитів у базі</p>
+			<p>{% trans "There are no exams in the base yet." %}</p>
 			{% endif %}
 			{% with object_list=exams %}
 				{% include "students/pagination.html" %}
