--- a/students/templates/students/students_add.html
+++ b/students/templates/students/students_add.html
@@ -1,11 +1,12 @@
 {% extends "students/base.html" %}
+{% load i18n %}
 {% load static from staticfiles %}
-{% block meta_title %}Додати Студента{% endblock meta_title %}
-{% block title %}Додати Студента{% endblock title %}
+{% block meta_title %}{% trans "Add Student" %}{% endblock meta_title %}
+{% block title %}{% trans "Add Student" %}{% endblock title %}
 {% block status_message %}
   {% if errors %}
   <div class="alert alert-warning" role="alert">
-    Будь ласка, виправте наступні помилки:
+    {% trans "Please fix the following messages" %}
   </div>
   {% endif %}
 {% endblock status_message %}
@@ -13,52 +14,52 @@
 <form action="{% url "students_add" %}" method="post" enctype="multipart/form-data" role="form" class="form-horizontal">
  {% csrf_token %}
  <div class="form-group {% if errors.first_name %}has-error{% endif %}">
-	<label for="first_name" class="col-sm-2 control-label">Ім'я*</label>
+	<label for="first_name" class="col-sm-2 control-label">{% trans "First Name*" %}</label>
 	<div class="col-sm-10">
-		<input type="text" value="{{ request.POST.first_name }}" name="first_name" id="first_name" placeholder="Введіть ваше ім'я" class="form-control" />
+		<input type="text" value="{{ request.POST.first_name }}" name="first_name" id="first_name" placeholder="{% trans "Input your first name" %}" class="form-control" />
 		<span class="help-block">{{ errors.first_name }}</span>
 	</div>
 </div>
 <div class="form-group {% if errors.last_name %}has-error{% endif %}">
-	<label for="last_name" class="col-sm-2 control-label">Прізвище*</label>
+	<label for="last_name" class="col-sm-2 control-label">{% trans "Second Name*" %}</label>
 	<div class="col-sm-10">
-		<input type="text" value="{{ request.POST.first_name }}" name="last_name" id="last_name" placeholder="Введіть ваше прізвище" class="form-control" />
+		<input type="text" value="{{ request.POST.first_name }}" name="last_name" id="last_name" placeholder="{% trans "Input your second name" %}" class="form-control" />
 		<span class="help-block">{{ errors.last_name }}</span>
 	</div>
 </div>
 <div class="form-group {% if errors.middle_name %}has-error{% endif %}">
-	<label for="middle_name" class="col-sm-2 control-label">По-батькові</label>
+	<label for="middle_name" class="col-sm-2 control-label">{% trans "Middle Name" %}</label>
 	<div class="col-sm-10">
-		<input type="text" value="{{ request.POST.first_name }}" name="middle_name" id="middle_name" class="form-control" placeholder="Введіть ваше ім'я по-батькові" />
+		<input type="text" value="{{ request.POST.first_name }}" name="middle_name" id="middle_name" class="form-control" placeholder="{% trans "Input your middle name" %}" />
 		<span class="help-block">{{ errors.middle_name }}</span>
 	</div>
 </div>
 <div class="form-group {% if errors.birthday %}has-error{% endif %}">
-	<label for="birthday" class="col-sm-2 control-label">Дата Народження*</label>
+	<label for="birthday" class="col-sm-2 control-label">{% trans "Date of Birth*" %}</label>
 	<div class="col-sm-10">
-		<input type="text" value="{{ request.POST.birthday }}" name="birthday" id="birthday" placeholder="Напр. 1984-12-30" class="form-control" />
+		<input type="text" value="{{ request.POST.birthday }}" name="birthday" id="birthday" placeholder="{% trans "E.g. 1984-12-30" %}" class="form-control" />
 		<span class="help-block">{{ errors.birthday }}</span>
 	</div>
 </div>
 <div class="form-group {% if errors.photo %}has-error{% endif %}">
-	<label for="photo" class="col-sm-2 control-label">Фото</label>
+	<label for="photo" class="col-sm-2 control-label">{% trans "Photo" %}</label>
 	<div class="col-sm-10">
 		<input type="file" value="" name="photo" id="photo" class="form-control" />
 		<span class="help-block">{{ errors.photo }}</span>
 	</div>
 </div>
 <div class="form-group {% if errors.ticket %}has-error{% endif %}">
-	<label for="ticket" class="col-sm-2 control-label">Студентський квиток*</label>
+	<label for="ticket" class="col-sm-2 control-label">{% trans "Student's Ticket*" %}</label>
 	<div class="col-sm-10">
-		<input type="text" value="{{ request.POST.ticket }}" name="ticket" id="ticket" class="form-control" placeholder="Введіть ваш номер студентського квитка"/>
+		<input type="text" value="{{ request.POST.ticket }}" name="ticket" id="ticket" class="form-control" placeholder="{% trans "Input your Ticket #" %}"/>
 		<span class="help-block">{{ errors.ticket }}</span>
 	</div>
 </div>
 <div class="form-group {% if errors.student_group %}has-error{% endif %}">
-	<label for="student_group" class="col-sm-2 control-label">Група*</label>
+	<label for="student_group" class="col-sm-2 control-label">{% trans "Group*" %}</label>
 	<div class="col-sm-10">
 		<select name="student_group" id="student_group" class="form-control">
-		<option value="">Оберіть групу</option>
+		<option value="">{% trans "Select a Group" %}</option>
 		{% for group in groups %}
 		<option value="{{ group.id }}" {% if group.id == request.POST.student_group|add:0 %}selected="1"{% endif %}>{{ group.title }}</option>
 		{% endfor %}
@@ -67,17 +68,17 @@
 	</div>
 </div>
 <div class="form-group {% if errors.notes %}has-error{% endif %}">
-	<label for="notes" class="col-sm-2 control-label">Додаткові Нотатки</label>
+	<label for="notes" class="col-sm-2 control-label">{% trans "Additional Notes" %}</label>
 	<div class="col-sm-10">
-		<textarea name="notes" id="notes" class="form-control" placeholder="Що б ви хотіли додати?">{{ request.POST.notes }}</textarea>
+		<textarea name="notes" id="notes" class="form-control" placeholder="{% trans "Something else?" %}">{{ request.POST.notes }}</textarea>
 		<span class="help-block">{{ errors.notes }}</span>
 	</div>
 </div>
 <div class="form-group">
 	<label class="col-sm-2 control-label"></label>
 	<div class="col-sm-10">
-		<input type="submit" value="Додати" name="add_button" class="btn btn-primary" />
-		<button type="submit" name="cancel_button" class="btn btn-link">Скасувати</button>
+		<input type="submit" value="{% trans "Add" %}" name="add_button" class="btn btn-primary" />
+		<button type="submit" name="cancel_button" class="btn btn-link">{% trans "Cancel" %}</button>
 	</div>
 </div>
 </form>
