--- a/students/templates/students/students_confirm_delete.html
+++ b/students/templates/students/students_confirm_delete.html
@@ -1,11 +1,13 @@
 {% extends "students/base.html" %}
+{% load i18n %}
 {% load static from staticfiles %}
-{% block meta_title %}Видалити Студента{% endblock meta_title %}
-{% block title %}Видалити Студента{% endblock title %}
+{% block meta_title %}{% trans "Delete Student" %}{% endblock meta_title %}
+{% block title %}{% trans "Delete Student" %}{% endblock title %}
 {% block content %}
 <form action="{% url "students_delete" object.id %}" method="post">
 {% csrf_token %}
-<p>Ви дійсно хочете видалити студента "{{ object }}"?</p>
-<input type="submit" value="Так" name="delete_button" class="btn btn-danger" /><br /><br />
+<p>{% blocktrans %}Do you really want to delete student: "{{ object }}"?{% endblocktrans %}</p>
+<input type="submit" value="{% trans "Yes" %}" name="delete_button" class="btn btn-danger" /><br /><br />
+<a href="{% url "home" %}" class="btn btn-info">{% trans "No" %}</a>
 </form>
 {% endblock content %}
