--- a/students/templates/students/students_edit.html
+++ b/students/templates/students/students_edit.html
@@ -1,11 +1,12 @@
 {% extends "students/base.html" %}
+{% load i18n %}
 {% load static from staticfiles %}
 {% load crispy_forms_tags %}
-{% block meta_title %} {% if 'add/' in request.path %} Додати Студента {% else %} Редагувати Студента {% endif %} {% endblock meta_title %}
-{% block title %} {% if 'add/' in request.path %} Додати Студента {% else %} Редагувати Студента {% endif %} {% endblock title %}
+{% block meta_title %} {% if 'add/' in request.path %}{% trans "Add Student" %}{% else %}{% trans "Edit Student" %}{% endif %} {% endblock meta_title %}
+{% block title %} {% if 'add/' in request.path %}{% trans "Add Student" %}{% else %}{% trans "Edit Student" %}{% endif %} {% endblock title %}
 {% block status_message %}
 {% if form.errors %}
-<div class="alert alert-warning" role="alert">Будь ласка, виправте наступні помилки</div>
+<div class="alert alert-warning" role="alert">{% trans "Please fix the following mistakes" %}</div>
 {% endif %}
 {% endblock %}
 {% block content %}
