--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -1,9 +1,10 @@
 {% extends "students/base.html" %}
+{% load i18n %}
 {% load static from staticfiles %}
-{% block meta_title %}Студенти{% endblock meta_title %}
-{% block title %}База Студентів{% endblock title %}
+{% block meta_title %}{% trans "Students" %}{% endblock meta_title %}
+{% block title %}{% trans "Students List" %}{% endblock title %}
 {% block content %}
-	<a href="{% url "students_add" %}" class="btn btn-primary" id="student-add-form-button">Додати Студента</a></h2>
+	<a href="{% url "students_add" %}" class="btn btn-primary" id="student-add-form-button">{% trans "Add Student" %}</a></h2>
 
 				<!-- Start Students Listing -->
 				<table class="table table-hover table-striped">
@@ -15,23 +16,23 @@
 								{% if order_by == 'id' and reverse != '1' %}&uarr;
 								{% elif order_by == 'id' and reverse == '1' %}&darr;
 								{% endif %}</a></th>
-              <th>Фото</th>
+              <th>{% trans "Photo" %}</th>
 							<th><a href="{% url "home" %}?order_by=last_name{% if order_by == 'last_name' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
-								Прізвище
+								{% trans "Last Name" %}
 								{% if order_by == 'last_name' and reverse != '1' %}&uarr;
 								{% elif order_by == 'last_name' and reverse == '1' %}&darr;
 								{% endif %}</a></th>
 							<th><a href="{% url "home" %}?order_by=first_name{% if order_by == 'first_name' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
-								Ім'я
+								{% trans "First Name" %}
 								{% if order_by == 'first_name' and reverse != '1' %}&uarr;
 								{% elif order_by == 'first_name' and reverse == '1' %}&darr;
 								{% endif %}</a></th>
 							<th><a href="{% url "home" %}?order_by=ticket{% if order_by == 'ticket' and reverse != '1' %}&amp;reverse=1{% endif %}" class="content-sorting">
-								№ Білету
+								{% trans "Ticket #" %}
 								{% if order_by == 'ticket' and reverse != '1' %}&uarr;
 								{% elif order_by == 'ticket' and reverse == '1' %}&darr;
 								{% endif %}</a></th>
-              <th>Дії</th>
+              <th>{% trans "Actions" %}</th>
           </thead>
 					{% endwith %}
 					<tbody>
@@ -55,13 +56,13 @@
 									<td>
 										<div class="btn-group">
 											<button type="button" class="btn btn-default dropdown-toggle"
-											data-toggle="dropdown">Дія
+											data-toggle="dropdown">{% trans "Action" %}
 											<span class="caret"></span>
 										</button>
 										<ul class="dropdown-menu" role="menu">
-											<li><a href="{% url "students_edit" student.id %}" class="student-edit-form-link">Редагувати</a></li>
-											<li><a href="{% url "journal" student.id %}">Відвідування</a></li>
-											<li><a href="{% url "students_delete" student.id %}" class="student-delete-form-link">Видалити</a></li>
+											<li><a href="{% url "students_edit" student.id %}" class="student-edit-form-link">{% trans "Edit" %}</a></li>
+											<li><a href="{% url "journal" student.id %}">{% trans "Journal" %}</a></li>
+											<li><a href="{% url "students_delete" student.id %}" class="student-delete-form-link">{% trans "Delete" %}</a></li>
 										</ul>
 									</div>
 								</td>
