Add Python Code Translation

--- a/students/templates/contact_admin/form.html
+++ b/students/templates/contact_admin/form.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 {% load static from staticfiles %}
 {% load crispy_forms_tags %}
-{% block meta_title %}{% trans "Connext with Administrator" %}{% endblock meta_title %}
-{% block title %}{% trans "Connext with Administrator" %}{% endblock title %}
+{% block meta_title %}{% trans "Connect with Administrator" %}{% endblock meta_title %}
+{% block title %}{% trans "Connect with Administrator" %}{% endblock title %}
 {% block status_message %}
 {% if form.errors %}
 <div class="alert alert-warning" role="alert">
