--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -16,7 +16,7 @@
 <p id="journal-nav" class="text-center">
 	<a href="?month={{ prev_month }}" title="{% trans "Previous Month" %}">&larr;</a>
 	<!-- TODO: translate month name -->
-	<strong>{{ month_verbose }} {{ year }}</strong>
+	<strong>{% trans month_verbose %} {{ year }}</strong>
 	<a href="?month={{ next_month }}" title="{% trans "Next Month" %}">&rarr;</a>
 </p>
 <table class="table table-hover table-striped table-bordered" id="students-journal">
@@ -26,7 +26,6 @@
 			<th class="name">{% trans "Student" %}</th>
 			{% for day in month_header %}
 			<th class="day-header">
-				<!-- TODO: translate day name -->
 				{% trans day.verbose %}
 				<br /> {{ day.day }}
 			</th>
