--- a/students/templates/students/students_add.html
+++ b/students/templates/students/students_add.html
@@ -6,7 +6,7 @@
 {% block status_message %}
   {% if errors %}
   <div class="alert alert-warning" role="alert">
-    {% trans "Please fix the following messages" %}
+    {% trans "Please fix the following mistakes" %}
   </div>
   {% endif %}
 {% endblock status_message %}
@@ -21,9 +21,9 @@
 	</div>
 </div>
 <div class="form-group {% if errors.last_name %}has-error{% endif %}">
-	<label for="last_name" class="col-sm-2 control-label">{% trans "Second Name*" %}</label>
+	<label for="last_name" class="col-sm-2 control-label">{% trans "Last Name*" %}</label>
 	<div class="col-sm-10">
-		<input type="text" value="{{ request.POST.first_name }}" name="last_name" id="last_name" placeholder="{% trans "Input your second name" %}" class="form-control" />
+		<input type="text" value="{{ request.POST.first_name }}" name="last_name" id="last_name" placeholder="{% trans "Input your last name" %}" class="form-control" />
 		<span class="help-block">{{ errors.last_name }}</span>
 	</div>
 </div>
