--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -22,9 +22,30 @@
 		<div class="row" id="header">
 
 			<!-- Logo -->
-			<div class="col-xs-8">
+			<div class="col-xs-7">
 				<h1>{% trans "Students Accounting Service" %}</h1>
 			</div>
+
+			<!-- Language Select -->
+			<div class="col-xs-1" id='lang-select'>
+				<div class='lang-select-form'>
+					<form action="{% url "set_language" %}" method='post'>{% csrf_token %}
+						<input type='hidden' name='lang' value='uk'>
+						<input type='hidden' name='return-path' value='{{request.path}}'>
+						<button type='submit' class='btn btn-link'>Укр</button>
+					</form>
+				</div>
+				|
+				<div class='lang-select-form'>
+					<form action="{% url "set_language" %}" method='post'>{% csrf_token %}
+						<input type='hidden' name='lang' value='en'>
+						<input type='hidden' name='return-path' value='{{request.path}}'>
+						<button type='submit' class='btn btn-link'>Eng</button>
+					</form>
+				</div>
+			</div>
+			<!-- End Language Select -->
+
 			<!-- Groups Selector -->
 			<div class="col-xs-4" id="group-selector">
         <strong>{% trans "Group:" %}</strong>
