--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -22,7 +22,7 @@
 		<div class="row" id="header">
 
 			<!-- Logo -->
-			<div class="col-xs-7">
+			<div class="col-xs-5">
 				<h1>{% trans "Students Accounting Service" %}</h1>
 			</div>
 
@@ -46,6 +46,7 @@
 			</div>
 			<!-- End Language Select -->
 
+			{% if user.is_authenticated %}
 			<!-- Groups Selector -->
 			<div class="col-xs-4" id="group-selector">
         <strong>{% trans "Group:" %}</strong>
@@ -56,7 +57,18 @@
           {% endfor %}
         </select>
       </div>
-
+			<!-- User's toolbar for authenticated users -->
+			<div class="col-xs-2" id="user-toolbar">
+				<span>{{ user.username }}</span> |
+				<a href="{% url "users:auth_logout" %}">{% trans "Logout" %}</a>
+			</div>
+			{% else %}
+			<!-- User's toolbar for anonymous users -->
+			<div class="col-xs-6" id="user-toolbar">
+				<a href="{% url "users:auth_login" %}">{% trans "Login" %}</a> |
+				<a href="{% url "users:registration_register" %}">{% trans "Register" %}</a>
+			</div>
+			{% endif %}
 		</div>
 		<!-- End Header -->
 
