--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -1,6 +1,7 @@
 {% extends "students/base.html" %}
 {% load i18n %}
 {% load static from staticfiles %}
+{% load pagenav %}
 {% block meta_title %}{% trans "Students" %}{% endblock meta_title %}
 {% block title %}{% trans "Students List" %}{% endblock title %}
 {% block content %}
@@ -78,8 +79,9 @@
           </tbody>
         </table>
 				<!-- End Students Listing -->
-				{% with object_list=students %}
+				<!-- {% with object_list=students %}
 				  {% include "students/pagination.html" %}
-				{% endwith %}
+				{% endwith %} -->
+{% pagenav object_list=students is_paginated=is_paginated paginator=paginator %}
 
 {% endblock content %}
